test/cases/compile_errors/compileError_shows_traceback_of_references_that_caused_it.zig
const foo = @compileError(
    "aoeu",
);

const bar = baz + foo;
const baz = 1;

export fn entry() i32 {
    return bar;
}

// error
// backend=stage2
// target=native
//
// :1:13: error: aoeu
